🔧 Modify code to enable Scss-lint

--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
     "node-sass": "node-sass",
     "sass": "node-sass -wr --source-map true ./styles/main.scss ./style.css"
   },
+  "scssLint.configDir": ".",
+  "scssLint.languages": [
+    "sass",
+    "scss"
+  ],
+  "scssLint.runOnTextChange": true,
+  "editor.formatOnSave": true,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kimyerimweb/tomorrow-house.git"
